test/kubernetes/e2e/features/validation/testdata/secret-deletion/invalid-vs-with-secret.yaml
# Don't set namespace, apply to test installation namespace
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: example-vs
spec:
  sslConfig: {} # invalid
  virtualHost:
    domains:
      - "example.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: nginx-upstream
