test/kubernetes/e2e/features/validation/testdata/secret-deletion/secret.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrVENDQWVHZ0F3SUJBZ0lVWXVqTFl5VklFZG13WWh2M3FRMklWb2NUMmdVd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0RERUtNQWdHQTFVRUF3d0JLakFlRncweU5EQTNNVGt4TnpJMU5URmFGdzB5TlRBM01Ua3hOekkxTlRGYQpNQXd4Q2pBSUJnTlZCQU1NQVNvd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUURICm8rVTRQelB1YTVCSS9Ra3dFY1Q3UXZLWm1RNmZRMjVBSHRZbS9qMThLbTBqV1cyazVUWitZbUQ3Y1k2Q2NTNzUKYnhyTGpqSCtvSkR3TEx3cGRnVm1QYUpCZUNVSnp5Kzd3U3lHVEFJMTgraHBnNHIwZUNZeEx3cU4xOE1LK0JpdgpGdm8wbGR2WHRaVFpTS [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRREhvK1U0UHpQdWE1QkkKL1Frd0VjVDdRdktabVE2ZlEyNUFIdFltL2oxOEttMGpXVzJrNVRaK1ltRDdjWTZDY1M3NWJ4ckxqakgrb0pEdwpMTHdwZGdWbVBhSkJlQ1VKenkrN3dTeUdUQUkxOCtocGc0cjBlQ1l4THdxTjE4TUsrQml2RnZvMGxkdlh0WlRaClNKaXpnQXZ1V1I2cXIyeFE4MDRTTmpEN2NkSjZ3TXJVd3Fib0NPN2NNTFViQTcyQklXVXEyWnk5dm9UbHBHa0IKTEVBSnFlRE1uTWdWdC8wM3N6T3hxeGdlZWRGazZkcEFhUWFpS1FibnMzWVFrbERwNFlyWlN2VjJIQ0JWUlhoQwp1ZnJGUCtNSDlKdFJpU [...]
kind: Secret
metadata:
  name: tls-secret
type: kubernetes.io/tls
