test/kubernetes/e2e/features/validation/testdata/secret-deletion/unused-secret.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMrVENDQWVHZ0F3SUJBZ0lVSk9tQS8xck10U2N2YkYxOG1DZkNsRUJOYUdNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0RERUtNQWdHQTFVRUF3d0JLakFlRncweU5EQTNNVGt4TnpJNE1UZGFGdzB5TlRBM01Ua3hOekk0TVRkYQpNQXd4Q2pBSUJnTlZCQU1NQVNvd2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3Z2dFS0FvSUJBUUNrCitsREJzY1N3SzRydUwrQ0czaWdwSUF1cklKenQxR3JvdXEyNzVkWDUyUkFWNlBrOTVvUnp6RlVmOXZCK0Jzb0kKRE5veXpSUVMyd3RYTWFUbWNyNHlOUEVqdjFLSGdNSFhYTitSOTZ1bkg0eTdCNnE3bWt1dGpaZ1RpcmswSDgzawpsSWNDcGMvQVRJRlZ1e [...]
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2QUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktZd2dnU2lBZ0VBQW9JQkFRQ2srbERCc2NTd0s0cnUKTCtDRzNpZ3BJQXVySUp6dDFHcm91cTI3NWRYNTJSQVY2UGs5NW9SenpGVWY5dkIrQnNvSUROb3l6UlFTMnd0WApNYVRtY3I0eU5QRWp2MUtIZ01IWFhOK1I5NnVuSDR5N0I2cTdta3V0alpnVGlyazBIODNrbEljQ3BjL0FUSUZWCnV6eWlOL2o4cmRpb0NoZW1wMGRQSmo2clF5UDZhbFpKN3RQQjgySkpUT3FTd0NITVo1ZE45NkhmSzBkclQyekoKRmhJQ1NDMWRzTFpST1BhQTEwYnV6YzVZQWtUSy9tSEpDbHJRUzN3VU1kdExCM29OcjNFcy9ITjJVUEo3MUtuOQpsdXJhSlR2dlU5Snh2K [...]
kind: Secret
metadata:
  name: tls-secret-unused
type: kubernetes.io/tls
