test/kubernetes/e2e/features/validation/testdata/secret-deletion/vs-with-secret.yaml
# Don't set namespace, apply to test installation namespace
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: example-vs
  # Note: Secret, VirtualService and Upstream will both be in the install namespace
  namespace: ${INSTALL_NAMESPACE}
spec:
  sslConfig:
    secretRef:
      name: tls-secret
      namespace: ${INSTALL_NAMESPACE} # Need to set ns in secretRef because it does not inherit ns from the VirtualService metadata
  virtualHost:
    domains:
      - "example.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: nginx-upstream
              namespace: ${INSTALL_NAMESPACE}
